@@ -1,3 +1,7 @@
+* May 26 2001 hship
+
+Initial work on Slashdot portlet.
+
 * May 25 2001 hship
 
 Check in start of the Portal tutorial.
